overflow mobile fix

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
